--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "register": "node src/pages/api/bot/register.js"
+    "register": "node src/pages/api/bot/register.js",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@discordjs/builders": "^1.6.1",
