--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "@discordjs/builders": "^1.6.1",
     "@discordjs/rest": "^1.5.0",
     "@prisma/client": "^4.9.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "axios": "^1.3.4",
+    "daisyui": "^2.51.5",
     "discord-api-types": "^0.37.35",
     "dotenv": "^16.0.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-turnstile": "^1.1.0",
     "superjson": "1.9.1",
     "tweetnacl": "^1.0.3",
     "zod": "^3.20.2"
