--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.3.4",
     "daisyui": "^2.51.5",
     "discord-api-types": "^0.37.35",
+    "discord-permission": "^1.0.4",
     "dotenv": "^16.0.3",
     "next": "13.1.6",
     "react": "18.2.0",
