--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "async": "^3.2.4",
     "axios": "^1.3.4",
     "daisyui": "^2.51.5",
     "discord-api-types": "^0.37.35",
@@ -32,11 +33,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-turnstile": "^1.1.0",
+    "sha3": "^2.1.4",
     "superjson": "1.9.1",
     "tweetnacl": "^1.0.3",
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/async": "^3.2.18",
     "@types/eslint": "^8.21.1",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
