fix(.env.example): added turnstile env vars

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ DATABASE_URL="file:./db.sqlite"
 DISCORD_BOT_TOKEN=""
 DISCORD_CLIENT_ID=""
 DISCORD_PUBLIC_KEY=""
+
+# Turnstile
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=""
+TURNSTILE_SECRET_KEY=""
