--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# support yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
